--- a/personal site/index.html
+++ b/personal site/index.html
@@ -70,7 +70,7 @@
     <section id="cv">
         <h2>CV/Bio</h2>
         <p>Please feel free to view my CV.</p>
-        <a href="Resume_JBJ Photo.pdf" download>Download PDF</a>
+        <a href="files/Resume_JBJ Photo.pdf" download>Download PDF</a>
     </section>
 
     <section id="blog">
