--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title" id="typed-name">JOHN BERNAD JOHNSON</h1>
-        <p class="section__text__p2">IT Student</p>
+        <p class="section__text__p2">IT Graduate</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -105,7 +105,7 @@
           <div class="text-container">
             <p>
 
-                    Hello There! I'm an aspiring final year engineering student studying in <b>Rajagiri School of Engineering & Technology</b>. My academic journey has been filled with rigorous learning and hands-on projects that have prepared me to tackle real-world challenges.
+                    Hello There! I'm a B.Tech graduate in Information Technology from <b>Rajagiri School of Engineering & Technology</b>. My academic journey has been filled with rigorous learning and hands-on projects that have prepared me to tackle real-world challenges.
 
                     This portfolio showcases some of my recent blogs and a glimpse into my passion for technology.
 
